--- a/package.json
+++ b/package.json
@@ -3,17 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "firebase": "^9.6.10",
-    "fuse.js": "^6.5.3",
+    "firebase": "^7.19.1",
+    "fuse.js": "^6.4.1",
     "normalize.css": "^8.0.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "5.0.0",
-    "styled-components": "^5.3.5"
+    "react-scripts": "3.4.0",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,5 +35,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^12.1.3"
   }
 }
